--- a/exercise_1/style.css
+++ b/exercise_1/style.css
@@ -2,3 +2,6 @@
 #greeting{text-decoration: solid;}
 #primeInfo{font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;}
 h1{font-size: large;}
+.head{text-decoration: solid;
+    font-family: 'Times New Roman', Times, serif
+    ;}
