--- a/exercise_1/primes.css
+++ b/exercise_1/primes.css
@@ -1,6 +1,6 @@
 #warnings {background-color: crimson;}
 #greeting{text-decoration: solid;}
-#primeInfo{font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;}
+#primeInfo{font-size: larger;}
 h1{font-size: large;}
 .head{text-decoration: solid;
     font-family: 'Times New Roman', Times, serif
