--- a/exercise_1/primes.css
+++ b/exercise_1/primes.css
@@ -1,7 +1,20 @@
-#warnings {background-color: crimson;}
-#greeting{text-decoration: solid;}
-#primeInfo{font-size: larger;}
-h1{font-size: large;}
-.head{text-decoration: solid;
-    font-family: 'Times New Roman', Times, serif
-    ;}
+#warnings {
+    background-color: crimson;
+}
+
+#greeting{
+    text-decoration: solid;
+}
+
+#primeInfo{
+    font-size: larger;
+}
+
+h1{
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.head {
+    text-decoration: solid;
+    font-size: larger;
+}
