--- a/exercises/todo_list/css/style.css
+++ b/exercises/todo_list/css/style.css
@@ -1,11 +1,21 @@
 .critical {
+    background-color: red;
 }
 
 .important {
+    background-color: orange;
 }
 
 .normal {
+    background-color: yellow;
 }
 
 .low {
+    background-color: green;
+}
+#newTask{
+    display: inline;
+}
+html{
+    background-color: red;
 }
