--- a/projects/list_of_stuff/css/style.css
+++ b/projects/list_of_stuff/css/style.css
@@ -1,12 +1,22 @@
 
 
-h1{
+h1.olive{
     margin: auto;
     width: 100%;
-    background-color: tan;
+    background-color:olivedrab;
     padding: 10px;
     text-align: center;
     color: white;
+    margin-top: 1.5%;
+}
+h1.grey{
+    margin: auto;
+    width: 100%;
+    background-color:lightgrey;
+    padding: 10px;
+    text-align: center;
+    color: black;
+    
 }
 
 #btnAdd {
@@ -43,7 +53,12 @@ h1{
 .table-striped{
     margin-top: 1%;
 }
-
+#btnSave{
+    width: 50%;
+    border-radius: 20px;
+    margin:auto;
+    display: block;
+}
 #InvestmentTerm{
     width:250px;
     margin:2px;
@@ -60,10 +75,5 @@ h1{
     border-radius: 20px;
     margin:auto;
     display: block;
-}
-
-#remove{
-    margin-left:auto; 
-    margin-right:auto;
 }
 
