--- a/projects/mashup/css/style.css
+++ b/projects/mashup/css/style.css
@@ -1,9 +1,18 @@
-
+.round{
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    margin-bottom: 30px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 .cropped{
     width: 100%; 
     height: 50%; 
     object-fit: cover;
 }
+
 .control{
     display: inline-block;
     margin: 0 50;
