--- a/exercises/jokes/templates/base.html
+++ b/exercises/jokes/templates/base.html
@@ -15,13 +15,18 @@
                 <div>
                     <label for="category" value="Category">Category</label>
                     <select name="category" id="selCat">
-                        <!-- TODO: Populate categories -->
+                     <option value="neutral">Neutral</option>
+                     <option value="chuck">Chuck</option>
+                     <option value="neutral">All</option>
                     </select>
                 </div>
                 <div>
                     <label for="language" value="Language">Language</label>
                     <select name="language" id="selLang">
-                        <!-- TODO: Populate languages -->
+                    <option value="english">en</option>
+                    <option value="spanish">es</option>
+                    <option value="german">de</option>
+                    <option value="italian">it</option>
                     </select>
                 </div>
             </div>
