--- a/exercises/jokes/templates/base.html
+++ b/exercises/jokes/templates/base.html
@@ -2,42 +2,63 @@
 
 <head>
     <title>Flask for Fun</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="static/css/main.css" type = "text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
     <div>
         <div><a href="/">Home</a></div>
+        <div class = "imgContainer">
+        <img class="cropped" src="https://i.pinimg.com/originals/24/c0/6b/24c06b12f265e3998862c16c2d490a6a.jpg" alt="people laughing" width = "100%" height = "100%">
+        </div>
         <div>
             <h2>Pick the category, language, and number of jokes to hear</h2>
         </div>
+        <br>
         <form method="POST">
             <div>
-                <div>
+                <div class = "org">
                     <label for="category" value="Category">Category</label>
-                    <select name="category" id="selCat">
-                     <option value="neutral">Neutral</option>
-                     <option value="chuck">Chuck</option>
-                     <option value="neutral">All</option>
+                    <select name="category" id="selCat" class = "btn btn-dark">
+                        <!-- TODO: Populate categories -->
+                        <option value="all">All</option>
+                        <option value="neutral">Neutral</option>
+                        <option value="chuck">Chuck</option>
                     </select>
                 </div>
-                <div>
+                <div class = "org">
                     <label for="language" value="Language">Language</label>
-                    <select name="language" id="selLang">
-                    <option value="english">en</option>
-                    <option value="spanish">es</option>
-                    <option value="german">de</option>
-                    <option value="italian">it</option>
+                    <select name="language" id="selLang" class = "btn btn-dark">
+                        <!-- TODO: Populate languages -->
+                        <option value="en">en</option>
+                        <option value="de">de</option>
+                        <option value="it">it</option>
+                        <option value="es">es</option>
+                    </select>
+                </div>
+                <div class = "org">
+                    <label for="number" value="Number">Number</label>
+                    <select name="number" id="selNum" class = "btn btn-dark">
+                        <!-- TODO: Populate numbers -->
+                        <option value="1">1</option>
+                        <option value="5">5</option>
+                        <option value="10">10</option>
                     </select>
                 </div>
             </div>
             <div>
                 <div>
-                    <button type="submit" id="btnAmuse" value="Tell me a joke">Amuse me</button>
+                    <button type="submit" id="btnAmuse" value="Tell me a joke" class = "btn btn-primary">Amuse me</button>
                 </div>
             </div>
         </form>
         <div id="jokes">
             <!-- This is a placeholder for jokes -->
+            {% for item in alljokes %}
+            <div class = "jks">{{ item }}</div>
+            {% endfor %}
         </div>
     </div>
 </body>
