--- a/exercises/jokes/templates/base.html
+++ b/exercises/jokes/templates/base.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </form>
-        <div id="jokes">
+        <div>
             {% for item in alljokes %}
             <div class = "btn btn-success">{{ item }}</div>
             {% endfor %}
