--- a/exercises/jokes/templates/base.html
+++ b/exercises/jokes/templates/base.html
@@ -30,11 +30,11 @@
                 <div class = "org">
                     <label for="language" value="Language">Language</label>
                     <select name="language" id="selLang" class = "btn btn-dark">
-                        <option value="en">en</option>
-                        <option value="de">de</option>
-                        <option value="it">it</option>
-                        <option value="es">es</option>
-                        <option value="gl">gl</option>
+                        <option value="en">English</option>
+                        <option value="de">German</option>
+                        <option value="it">Italian</option>
+                        <option value="es">Spanish</option>
+                        <option value="gl">Galician</option>
                     </select>
                 </div>
                 <div class = "org">
