--- a/exercises/geo/templates/country.html
+++ b/exercises/geo/templates/country.html
@@ -8,7 +8,7 @@
         <div class="mui-row">
             <div class="mui-col">
                 <div class="mui-select">
-                    <select name="country_name">
+                    <select name="selCountry" id = "selCountry">
                         {% for o in options %}
                         <option value="{{o[0]}}">{{o[1]}}</option>
                         {% endfor %}
