--- a/exercises/geo/templates/base.html
+++ b/exercises/geo/templates/base.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <link href="//cdn.muicss.com/mui-0.10.1/css/mui.min.css" rel="stylesheet" type="text/css" />
-    <script src="//cdn.muicss.com/mui-0.10.1/js/mui.min.js"></script>
+    <link href="static/css/mui.min.css" rel="stylesheet" type="text/css" />
+    <script src="static/js/mui.min.js"></script>
   </head>
   <body>
     <div>
