--- a/exercises/geo/templates/continent.html
+++ b/exercises/geo/templates/continent.html
@@ -8,7 +8,7 @@
         <div class="mui-row">
             <div class="mui-col">
                 <div class="mui-select">
-                    <select name="selContinent" id = "selContinent">
+                    <select name="selContinent">
                         {% for o in options %}
                         <option value="{{o[0]}}">{{o[0]}}</option>
                         {% endfor %}
