--- a/exercises/geo/templates/region.html
+++ b/exercises/geo/templates/region.html
@@ -8,7 +8,7 @@
         <div class="mui-row">
             <div class="mui-col">
                 <div class="mui-select">
-                    <select name="selRegion" id = "selRegion">
+                    <select name="selRegion">
                         {% for o in options %}
                         <option value="{{o[0]}}">{{o[0]}}</option>
                         {% endfor %}
