--- a/projects/fundraiser/templates/index.html
+++ b/projects/fundraiser/templates/index.html
@@ -17,12 +17,12 @@
         <div>
             <label for="title" class="form1">Purchaser</label>
             <input id="title" name = "nm" required />
-            <label for="title" class="form1" style = "margin-left:980px;">Date</label>
-            <input type = "date" name = "dt" id="title" required />
+            <label for="title" class="form1" style = "position:absolute;margin-left:910px;">Date</label>
+            <input type = "date" name = "dt" style = "position:relative;margin-left:950px;"id="title" required />
         </div>
 
         <div>
-            <table class="mui-table mui-table--bordered" style = "margin-top:47px;width:25%;float:left;">
+            <table  class="mui-table" border=1px style = "border-collapse: collapse;margin-top:47px;width:15%;float:left;height:500px;font-size:12px">
                 <thead>
                     <tr>
                        <th>Merchant</th>
@@ -34,7 +34,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <input type="text" id="aW" style = "border:0px;width:210px;" value="A&W 10%(Sold as LIS Card)" name="aW" readonly>
+                            <input type="text" id="aW" style = "border:0px;width:190px;" value="A&W 10%(Sold as LIS Card)" name="aW" readonly>
                         </td>
                         <td>
                             <select id ="sel1" class = "sel" style = "width:80px" type = "int" name = "valAW">        
@@ -45,13 +45,13 @@
                             </select>
                         </td>
                         <td> 
-                            <input type="int" id = "qty1" style = "width:150px"class = "qty" name="quantityAW">
+                            <input type="int" id = "qty1" style = "width:75px"class = "qty" name="quantityAW">
                         </td>
-                        <td><input type ="int" id = "result1" style = "width:150px"class = "result" name="amountAW"readonly/></td>
+                        <td><input type ="int" id = "result1" style = "width:60px"class = "result" name="amountAW"readonly/></td>
                     </tr>              
                     <tr>
                         <td>
-                            <input type="text" id="aC" style = "border:0px;width:200px;" value="Ace 10%" name="ace" readonly>
+                            <input type="text" id="aC" style = "border:0px;width:190px;" value="Ace 10%" name="ace" readonly>
                         </td>
                         <td>
                             <select id ="sel2"  class = "sel" style = "width:80px" name = "de">        
@@ -60,13 +60,13 @@
                             </select>
                         </td>
                         <td> 
-                            <input type="int" id = "qty2" style = "width:150px"class = "qty" name="qAce">
+                            <input type="int" id = "qty2" style = "width:75px"class = "qty" name="qAce">
                         </td>
-                        <td><input type ="int" id = "result2" style = "width:150px"class = "result" name = "amounAce"readonly/></td>
+                        <td><input type ="int" id = "result2" style = "width:60px"class = "result" name = "amounAce"readonly/></td>
                     </tr>
                     <tr>
                         <td>
-                            <input type="text" id="caseys" style = "border:0px;width:200px;" value="Caseys 3%" name="caseys" readonly>
+                            <input type="text" id="caseys" style = "border:0px;width:190px;" value="Caseys 3%" name="caseys" readonly>
                         </td>
                         <td>
                             <select id ="sel3" class = "sel" style = "width:80px" name ="d">        
@@ -76,13 +76,13 @@
                             </select>
                         </td>
                         <td> 
-                            <input type="int" id = "qty3" style = "width:150px"class = "qty" name="quanC">
+                            <input type="int" id = "qty3" style = "width:75px"class = "qty" name="quanC">
                         </td>
-                        <td><input type ="int" id = "result3" style = "width:150px"class = "result" name = "amounC" readonly/></td>
+                        <td><input type ="int" id = "result3" style = "width:60px"class = "result" name = "amounC" readonly/></td>
                     </tr>
                     <tr>
                         <td>
-                            <input type="text" id="fway" style = "border:0px;width:200px;" value="Fareway 3%" name="fway" readonly>
+                            <input type="text" id="fway" style = "border:0px;width:190px;" value="Fareway 3%" name="fway" readonly>
                         </td>
                         <td>
                             <select id ="sel4" class = "sel" style = "width:80px" name = "dN">        
@@ -94,15 +94,15 @@
                             </select>
                         </td>
                         <td> 
-                            <input type="int" id = "qty4" style = "width:150px"class = "qty" name="quanfway"/>
+                            <input type="int" id = "qty4" style = "width:75px"class = "qty" name="quanfway"/>
                         </td>
                         <td>
-                            <input type ="int" id = "result4" style = "width:150px"class = "result" name ="amounfway" readonly/> 
+                            <input type ="int" id = "result4" style = "width:60px"class = "result" name ="amounfway" readonly/> 
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <input type="text" id="fisks" style = "border:0px;width:200px;" value="Fisks 5%" name="fisks" readonly>
+                            <input type="text" id="fisks" style = "border:0px;width:190px;" value="Fisks 5%" name="fisks" readonly>
                         </td>
                         <td>
                             <select id ="sel5" class = "sel" style = "width:80px" name ="DE">        
@@ -113,13 +113,13 @@
                             </select>
                         </td>
                         <td> 
-                            <input type="int"  id = "qty5" style = "width:150px"class = "qty" name="quanfisks">
+                            <input type="int"  id = "qty5" style = "width:75px"class = "qty" name="quanfisks">
                         </td>
-                        <td><input type ="int" id = "result5" style = "width:150px"class = "result" name="amounfisks" readonly/> </td>
+                        <td><input type ="int" id = "result5" style = "width:60px"class = "result" name="amounfisks" readonly/> </td>
                     </tr>
                     <tr>
                         <td>
-                            <input type="text" id="dfresh" style = "border:0px;width:200px;" value="Dollar Fresh 3%" name="dfresh" readonly>
+                            <input type="text" id="dfresh" style = "border:0px;width:190px;" value="Dollar Fresh 3%" name="dfresh" readonly>
                         </td>
                         <td>
                             <select id ="sel6" class = "sel" style = "width:80px" name = "DEN">        
@@ -129,15 +129,15 @@
                             </select>
                         </td>
                         <td> 
-                            <input type="int" id = "qty6" style = "width:150px"class = "qty" name="quandf">
+                            <input type="int" id = "qty6" style = "width:75px"class = "qty" name="quandf">
                         </td>
-                        <td><input type ="int" id = "result6" style = "width:150px"class = "result" name = "amoundf"readonly/> </td>
+                        <td><input type ="int" id = "result6" style = "width:60px"class = "result" name = "amoundf"readonly/> </td>
                     </tr>
                 </tbody>
             </table>
         </div>
         <div> 
-            <table class="mui-table mui-table--bordered" style = "margin-top:47px;width:25%;float:right;">
+            <table  class="mui-table"border=1px style = "border-collapse: collapse;margin-top:47px;width:25%;float:right;height:500px;font-size:12px">
                 <thead>
                     <tr>
                        <th>Merchant</th>
@@ -149,7 +149,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <input type="text" id="kwikstar" style = "border:0px;width:200px;" value="Kwik Star 5% **" name="kwikstar" readonly>
+                            <input type="text" id="kwikstar" style = "border:0px;width:190px;" value="Kwik Star 5% **" name="kwikstar" readonly>
                         </td>
                         <td>
                             <select id ="sel7" class = "sel" style = "width:80px" name="DENO">        
@@ -163,13 +163,13 @@
                             </select>
                         </td>
                         <td> 
-                            <input type="int"  id = "qty7" style = "width:150px"class = "qty" name="quankwik">
+                            <input type="int"  id = "qty7" style = "width:75px"class = "qty" name="quankwik">
                         </td>
-                        <td><input type ="int" id = "result7" style = "width:150px"class = "result"  name="amounkwik" readonly/> </td>
+                        <td><input type ="int" id = "result7" style = "width:60px"class = "result"  name="amounkwik" readonly/> </td>
                     </tr>
                     <tr>
                         <td>
-                            <input type="text" id="pinters" style = "border:0px;width:200px;" value="Pinters 3%" name="pinters" readonly>
+                            <input type="text" id="pinters" style = "border:0px;width:190px;" value="Pinters 3%" name="pinters" readonly>
                         </td>
                         <td>
                             <select id ="sel8" class = "sel" style = "width:80px" name = "DENOM">        
@@ -178,13 +178,13 @@
                             </select>
                         </td>
                         <td> 
-                            <input type="int" id = "qty8" style = "width:150px"class = "qty" name="quanpint">
+                            <input type="int" id = "qty8" style = "width:75px"class = "qty" name="quanpint">
                         </td>
-                        <td><input type ="int" id = "result8" style = "width:150px"class = "result" name="amounpint"readonly/> </td>
+                        <td><input type ="int" id = "result8" style = "width:60px"class = "result" name="amounpint"readonly/> </td>
                     </tr>
                     <tr>
                         <td>
-                            <input type="text" id="subway" style = "border:0px;width:200px;" value="Subway 5%" name="subway" readonly>
+                            <input type="text" id="subway" style = "border:0px;width:190px;" value="Subway 5%" name="subway" readonly>
                         </td>
                         <td>
                             <select id ="sel9" class = "sel"style = "width:80px" name = "DENOMI">        
@@ -192,14 +192,14 @@
                             </select>
                         </td>
                         <td> 
-                            <input type="int" id = "qty9" style = "width:150px"class = "qty" name="quansub">
+                            <input type="int" id = "qty9" style = "width:75px"class = "qty" name="quansub">
                         </td>
-                        <td><input type ="int" id = "result9" style = "width:150px"class = "result" name="amounsub"readonly/> 
+                        <td><input type ="int" id = "result9" style = "width:60px"class = "result" name="amounsub"readonly/> 
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <input type="text" id="szq" style = "border:0px;width:200px;" value="Sue-Z-Q 10%" name="szq" readonly>
+                            <input type="text" id="szq" style = "border:0px;width:190px;" value="Sue-Z-Q 10%" name="szq" readonly>
                         </td>
                         <td>
                             <select id ="sel10" class = "sel" style = "width:80px" name = "DENOMIN">        
@@ -208,13 +208,13 @@
                             </select>
                         </td>
                         <td> 
-                            <input type="int" id = "qty10" style = "width:150px"class = "qty" name="quanszq">
+                            <input type="int" id = "qty10" style = "width:75px"class = "qty" name="quanszq">
                         </td>
-                        <td><input type ="int" id = "result10" style = "width:150px"class = "result" name="amounszq" readonly/> </td>
+                        <td><input type ="int" id = "result10" style = "width:60px"class = "result" name="amounszq" readonly/> </td>
                     </tr>
                     <tr>
                         <td>
-                            <input type="text" id="atomic" style = "border:0px;width:200px;" value="Atomic 5%" name="atomic" readonly>
+                            <input type="text" id="atomic" style = "border:0px;width:190px;" value="Atomic 5%" name="atomic" readonly>
                         </td>
                         <td>
                             <select id ="sel11" class = "sel" style = "width:80px" name = "DENOMINA">        
@@ -223,13 +223,13 @@
                             </select>
                         </td>
                         <td> 
-                            <input type="int" id = "qty11" style = "width:150px"class = "qty" name="quanatom">
+                            <input type="int" id = "qty11" style = "width:75px"class = "qty" name="quanatom">
                         </td>
-                        <td><input type ="int" id = "result11" style = "width:150px"class = "result" name="amounatom" readonly/> </td>
+                        <td><input type ="int" id = "result11" style = "width:60px"class = "result" name="amounatom" readonly/> </td>
                     </tr>
                     <tr>
                         <td>
-                            <input type="text" id="so" style = "border:0px;width:200px;" value="Special Orders" name="so" readonly>
+                            <input type="text" id="so" style = "border:0px;width:190px;" value="Special Orders" name="so" readonly>
                         </td>
                         <td>
                             <select id = "sel12" class = "sel" style = "width:80px" name = "DENOMINAT">        
@@ -240,9 +240,9 @@
                             </select>
                         </td>
                         <td> 
-                            <input type="int" id = "qty12" style = "width:150px"class = "qty" name="quanso">
+                            <input type="int" id = "qty12" style = "width:75px"class = "qty" name="quanso">
                         </td>
-                        <td><input type ="int" id = "result12" style = "width:150px"class = "result" name="amounso" readonly/> </td>
+                        <td><input type ="int" id = "result12" style = "width:60px"class = "result" name="amounso" readonly/> </td>
                     </tr>
                 </tbody>
             </table>
@@ -252,13 +252,13 @@
         </div>
         <div class= "mui-container mui--text-center" style = "margin-top:25px">
             <label for="total_Cards">Total Cards</label>
-            <input id="totalCards" type = "int" style = "width:80px" name = "tcards" readonly />
+            <input id="totalCards" type = "int" style = "width:65px;margin-bottom:20px" name = "tcards" readonly />
             <label for="total_Due">Total Due ($)</label>
-            <input id="totalDue" type = "int" style = "width:80px" name = "tdue" readonly />
+            <input id="totalDue" type = "int" style = "width:65px;margin-bottom:20px" name = "tdue" readonly />
             <label for="purchaser_Discretion">Purchaser Discretion (1%)</label>
-            <input id="pd1" style = "width:80px" name = "pdamount" readonly />
+            <input id="pd1" style = "width:60px" name = "pdamount" readonly />
         </div>
-        <div class= "mui-container mui--text-center" style = "margin-top:25px">
+        <div class= "mui-container mui--text-center" style = "margin-top:20px">
             <h2>Purchaser Discretion (You can only choose one)</h2>
         </div>
         <div class= "mui-container mui--text-center" style = "margin-top:20px;margin-bottom:20px">
