--- a/projects/fundraiser/templates/manager.html
+++ b/projects/fundraiser/templates/manager.html
@@ -7,12 +7,15 @@
     <body>
         <div class= "mui-container mui--text-center">
         <h1 class="mui--text-display2"> You have entered the manager's section</h1>
-        <h2 class="mui--text-display3"> What would you like to see</h2>
+        <h2 class="mui--text-display3"> What would you like to see?</h2>
         <a href = "/list" class = "mui-btn mui-btn--primary">Purchase Records</a>
+        <a href = "/month" class = "mui-btn mui-btn--primary">Total Cards Sold within date range</a>
+        <a href = "/student" class = "mui-btn mui-btn--primary">Total Tuition Credit for a Specific Student</a>
         <a href = "/totals" class = "mui-btn mui-btn--primary">Total Cards Sold From Each Merchant</a>
         <a href = "/disc" class = "mui-btn mui-btn--primary">Purchaser Discretion Allocations</a>
         <a href = "/allfund" class = "mui-btn mui-btn--primary">Total Donated to All-Student Fund</a>
         <a href = "/gfund" class = "mui-btn mui-btn--primary">Total Donated to General Fund</a>
+
         </div>
     </body>
 </html>
