--- a/projects/fundraiser/templates/totals.html
+++ b/projects/fundraiser/templates/totals.html
@@ -21,5 +21,10 @@
         <a href = "/szq" class = "mui-btn mui-btn--primary">Sue-Zue-Q's</a>
         <a href = "/special" class = "mui-btn mui-btn--primary">Special</a>
         </div>
+
+        <div class= "mui-container mui--text-center" style = "margin-top:30px;margin-bottom:20px">
+        <a href = "/manager" class = "mui-btn mui-btn--danger">Back to Manager Home</a>
+        <a href = "/" class = "mui-btn mui-btn--danger">Back to Fundraiser Home</a> 
+        </div>
     </body>
 </html>
