--- a/projects/final_project/templates/suggestions.html
+++ b/projects/final_project/templates/suggestions.html
@@ -12,10 +12,10 @@
             <th>Game Name</th>           
          </thead>
          
-         {% if data.Games %}
+         {% if rows in data.Games %}
             <tr>
-               <td>{{Games.0}}</td>
-               <td>{{row.1 }}</td>
+               <td>{{rows.0}}</td>
+               <td>{{rows.1 }}</td>
             </tr>
          {% endif %}
       </table>
