--- a/projects/final_project/templates/suggestions.html
+++ b/projects/final_project/templates/suggestions.html
@@ -12,10 +12,10 @@
             <th>Game Name</th>           
          </thead>
          
-         {% for rows in data.Games %}
+         {% for key, value in x.items() %}
             <tr>
-               <td>{{rows.name}}</td>
-               <td>{{rows.1 }}</td>
+               <td>{{key}}</td>
+               <td>{{value}}</td>
             </tr>
          {% endfor %}
       </table>
