--- a/projects/final_project/templates/suggestions.html
+++ b/projects/final_project/templates/suggestions.html
@@ -12,7 +12,7 @@
             <th>Game Name</th>           
          </thead>
          
-         {% for key, value in x.items() %}
+         {% for key, value in y.items() %}
             <tr>
                <td>{{key}}</td>
                <td>{{value}}</td>
