--- a/projects/final_project/templates/result.html
+++ b/projects/final_project/templates/result.html
@@ -10,11 +10,16 @@
         <div class = "mui-container mui--text-center" style= "margin-bottom:20px,margin-top:20px">
         <i class="fas fa-dice-d20 fa-10x"></i>
         </div>
-        <div class= "mui-container mui--text-center" style= "margin-bottom:20px">
         <div class= "mui-container mui--text-center">
             <h1 class="mui--text-display2">{{ msg }}</h1>
+            <br><br>
             <a href = "/" class = "mui-btn mui-btn--primary">Go to Home</a>
             <a href = "/newgame" class = "mui-btn mui-btn--primary">Add New Contribution</a>
         </div>
+        <br><br><br>
+        <div class= "mui-container mui--text-center" >
+        <i class="fab fa-playstation fa-3x" style = "color:#003791;margin-right:15px"></i><i class="fab fa-xbox fa-3x" style = "color:#107C10;margin-right:15px"></i><i class="fab fa-steam fa-3x"></i>
+        </div>
+        <br>
     </body>
 </html>
