--- a/projects/final_project/templates/gameinventory.html
+++ b/projects/final_project/templates/gameinventory.html
@@ -18,8 +18,12 @@
         <button style = "width:140px; margin-right:40px"><a  href = "/xbox"><i style = "color:#107C10"class="fab fa-xbox fa-3x"></i></a></button>
         <button style = "width:140px;"><a  href = "/pc"><i style = "color:black" class="fab fa-steam fa-3x"></i></a></button>
         </div>
-        <br><br><br>
+        <br><br>
+        <br>
         <div class = "mui-container mui--text-center">
+        <a  href = "/sellers"><i class="fab fa-bitcoin fa-10x"></i></a>
+        <h2> Sellers Point<h2>
+        <br>
         <a class = "mui-btn mui-btn--primary" href = "/"> Back to Community Home </a>
         </div>
     </body>
