--- a/projects/final_project/templates/newgame.html
+++ b/projects/final_project/templates/newgame.html
@@ -18,16 +18,16 @@
             <br>
             <br>
             <div class = "mui-container mui--text-center">
-                <label style = "font-size:20px"> Contributor Name </label>
-                <input type = "text" name = "user" style = "margin-right:25px" required/>
-                <label for="selCat" style = "font-size:20px" value="Category"> Preferred Platform</label>
-                <select name="platform" id="selPlat" class = "mui-btn mui-btn--danger" style = "margin-right:25px">
+                <label style = "font-size:20px">Name</label>
+                <input type = "text" placeholder = "Contributor"name = "user" style = "width:13%;margin-right:47px" class = "mui-btn mui-btn--danger" required/>
+                <label for="selCat" style = "font-size:20px" value="Category">Platform</label>
+                <select name="platform" id="selPlat" class = "mui-btn mui-btn--danger" style = "margin-right:47px">
                     <option value="playstation">Playstation</option>
                     <option value="xbox">Xbox</option>
                     <option value="pc">PC</option>
                 </select>
-                <label for="selCat" style = "font-size:20px" value="Category"> Contribution Type</label>
-                <select name="contType" id="selType" class = "mui-btn mui-btn--danger" style = "margin-right:25px">
+                <label for="selCat" style = "font-size:20px" value="Category">Contribution</label>
+                <select name="contType" id="selType" class = "mui-btn mui-btn--danger" style = "margin-right:0px">
                     <option value="ask">Ask</option>
                     <option value="suggestion">Suggestion</option>
                 </select>
@@ -35,28 +35,31 @@
                 <br>
                 <div class = "mui-container mui--text-center">
                 <label style = "font-size:20px"> Date </label>
-                <input name = "date" type = "date" required/>
+                <input name = "date" type = "date" class = "mui-btn mui-btn--danger" required/>
                 </div>
             </div>
             <br>
             <div class = "mui-container mui--text-center">
             <h1> Enter Game Title </h1>
             </div>
-            <div class="mui-container mui--text-center" style = "width:60%">
+            <div class="mui-container mui--text-center" style = "width:60%;margin-bottom:0px;">
                 <div class="mui-textfield">
                     <input type = "text" name = "game_name"style= "width:100%" required/>
                 </div>
             </div>
             </div>
-            <div>
             <div id = "response"></div>
-            </div>
             <br>
-            <br>
-            <div class= "mui-container mui--text-center" style= "margin-bottom:20px">
+            <div class= "mui-container mui--text-center" style= "margin-bottom:20px;margin-top:12px">
             <input type = "submit" value = "submit" class = "mui-btn mui-btn--primary"/>
         </form>
+        <select id="selPlatt" class = "mui-btn mui-btn--danger" style = "margin-right:0px">
+                    <option value="playstation">Playstation</option>
+                    <option value="xbox">Xbox</option>
+                    <option value="pc">PC</option>
+        </select>
         <button class = "mui-btn mui-btn--primary" onclick = "quick_suggestion()"> Quick Suggestion </button>
+        
         <a  class = "mui-btn mui-btn--primary" href= "/rawdata">Game Suggestions Collection</a>
         </div>
         <br>
@@ -69,5 +72,6 @@
         <div class = "mui-container mui--text-center">
         <a class = "mui-btn mui-btn--raised" href = "/"> Back to Community Home </a>
         </div>
+        
     </body>
 </html>
